fixed bubble cutoff

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,7 +92,7 @@ body{
 #bubbles{
 	margin:0 auto;
 	width:100%;
-	height:100px;
+	height:15px;
 	text-align: center;
 	position:absolute;
 }
@@ -100,21 +100,14 @@ body{
 .nav-bubble{
 	width:13px;
 	height:13px;
-	border:1px solid black;
+	
 	margin-right:15px;
 	display: inline-block;
-	border-radius:15px;
+	border-radius:10px;
+	margin-top:3px;
 	background-color: #4CAF50;
 	opacity:.3;
 	
-}
-
-.nav-bubble:hover{
-	opacity:.9;
-}
-
-.filled-in{
-	opacity:.9;
 }
 
 
